<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Antoni Piwowarski 62024"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/apbtnHide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="88dp"
        android:onClick="hideNumbersButtonsap"
        android:text="@string/btnHide"
        app:layout_constraintBaseline_toBaselineOf="@+id/apbtnDraw"
        app:layout_constraintStart_toEndOf="@+id/apbtnDraw" />

    <Button
        android:id="@+id/btnNewGameap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:onClick="NewGameap"
        android:text="@string/btnNewGameap"
        app:layout_constraintBaseline_toBaselineOf="@+id/apbtnGameResult"
        app:layout_constraintStart_toEndOf="@+id/apbtnGameResult" />

    <Spinner
        android:id="@+id/SpinnerNumberColumnssap"
        android:layout_width="113dp"
        android:layout_height="24dp"
        android:layout_marginStart="12dp"
        android:entries="@array/numbers"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView2"
        app:layout_constraintStart_toEndOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="88dp"
        android:layout_marginTop="60dp"
        android:text="@string/txtNumberOfColumns"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/apbtnGameResult" />

    <Button
        android:id="@+id/apbtnGameResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="24dp"
        android:onClick="resultGameap"
        android:text="@string/btnGameResultap"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/apbtnDraw" />

    <Spinner
        android:id="@+id/SpinnerNumberRowsap"
        android:layout_width="116dp"
        android:layout_height="28dp"
        android:layout_marginStart="40dp"
        android:entries="@array/numbers"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView3"
        app:layout_constraintStart_toEndOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="88dp"
        android:layout_marginTop="24dp"
        android:text="@string/txtNumberOfRows"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/apbtnDraw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginTop="388dp"
        android:onClick="makePermutationap"
        android:text="@string/btnDrawap"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/aptxtResult"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:layout_marginTop="45dp"
        android:text="Result"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.512" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/apconstraintLayout"
        android:layout_width="396dp"
        android:layout_height="299dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/txtWidthap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="30dp"
        android:text="@string/txtWelcome"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtHeightap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="-12dp"
        android:text="@string/txtCreator"
        app:layout_constraintBaseline_toBaselineOf="@+id/txtWidthap"
        app:layout_constraintStart_toEndOf="@+id/textView" />

</androidx.constraintlayout.widget.ConstraintLayout>